--- a/app/src/main/res/layout/fragment_note__list.xml
+++ b/app/src/main/res/layout/fragment_note__list.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center_horizontal"
+    android:background="@color/cardview_dark_background"
+    android:fitsSystemWindows="true"
     tools:context=".fragments.Note_List">
 
 
@@ -11,34 +15,30 @@
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_gravity="center_horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView"
+        app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/notes">
 
     </androidx.recyclerview.widget.RecyclerView>
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="hello"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="24dp"
-        android:elevation="4dp"
         android:contentDescription="@string/addnote"
+        android:elevation="16dp"
+        android:layout_gravity="bottom|right"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_anchorGravity="bottom|right|end"
         app:srcCompat="@drawable/ic_plus"
-        app:tint="@color/white"/>
+        app:tint="@color/white"
+        tools:ignore="ImageContrastCheck"
+        app:backgroundTint="#19ABDF"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
