--- a/app/src/main/res/layout/notes.xml
+++ b/app/src/main/res/layout/notes.xml
@@ -1,53 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    android:backgroundTint="#B198EC"
-    android:elevation="4dp"
+    android:layout_marginLeft="16dp"
+    android:layout_marginRight="16dp"
+    app:cardElevation="100dp"
+    android:backgroundTint="#989393"
+    app:strokeColor="@color/black"
+    app:strokeWidth="2dp"
     app:cardCornerRadius="8dp">
 
-<androidx.constraintlayout.widget.ConstraintLayout
-android:layout_height="wrap_content"
-android:layout_width="match_parent">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/noteConstraintLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="8dp">
 
-<TextView
-    android:id="@+id/note_title"
-    android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    android:layout_width="wrap_content"
-    android:padding="8dp"
-    android:text="New Note"
-    android:textSize="30dp"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
-
-
-<TextView
-    android:id="@+id/note_content"
-    android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    android:layout_width="match_parent"
-    android:padding="8dp"
-    android:text="Note content"
-    android:textSize="16dp"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/note_title" />
-
-<TextView
-    android:id="@+id/note_date"
-    android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    android:layout_width="wrap_content"
-    android:padding="8dp"
-    android:text="date"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/note_content" />
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/note_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:padding="4dp"
+            android:text="New Note"
+            android:textStyle="bold"
+           android:textColor="@color/black"
+            android:textSize="24dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/note_content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:padding="4dp"
+            android:textColor="@color/black"
+            android:text="Note content"
+            android:textSize="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/note_title" />
+
+        <TextView
+            android:id="@+id/note_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:padding="8dp"
+            android:text="date"
+            android:textStyle="italic"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/note_content"
+            android:textColor="#393737"/>
 
 
-    </com.google.android.material.card.MaterialCardView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</com.google.android.material.card.MaterialCardView>
