--- a/app/src/main/res/layout/fragment_add__note.xml
+++ b/app/src/main/res/layout/fragment_add__note.xml
@@ -19,23 +19,24 @@
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
             android:hint="Title"
-            app:hintTextColor="@color/white"
             android:textColorHint="@android:color/darker_gray"
+            app:boxStrokeColor="@color/white"
+            app:boxStrokeWidth="2dp"
             app:hintAnimationEnabled="true"
+            app:hintTextColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:boxStrokeColor="@color/white"
-            app:boxStrokeWidth="2dp">
+            app:layout_constraintTop_toTopOf="parent">
 
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/title_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="textAutoCorrect"
                 android:textColor="@color/white"
-                android:inputType="textAutoCorrect" />
+                android:textCursorDrawable="@drawable/cursor_color" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -47,14 +48,14 @@
             android:layout_margin="4dp"
             android:hint="Note"
             android:textColorHint="@android:color/darker_gray"
+            app:boxStrokeColor="@color/white"
+            app:boxStrokeWidth="2dp"
             app:hintAnimationEnabled="true"
             app:hintTextColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/title"
-            app:boxStrokeColor="@color/white"
-            app:boxStrokeWidth="2dp">
+            app:layout_constraintTop_toBottomOf="@id/title">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/content_edit_text"
@@ -62,9 +63,10 @@
                 android:layout_height="match_parent"
                 android:gravity="top"
                 android:inputType="textMultiLine"
-                android:textColor="@color/white"
                 android:lines="100"
-                android:minLines="27" />
+                android:minLines="27"
+                android:textColor="@color/white"
+                android:textCursorDrawable="@drawable/cursor_color" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -72,9 +74,9 @@
             android:id="@+id/save_note_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:backgroundTint="#19ABDF"
             android:text="Save"
             app:icon="@drawable/ic_check"
-            android:backgroundTint="#19ABDF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
