--- a/app/src/main/res/layout/fragment_note__update.xml
+++ b/app/src/main/res/layout/fragment_note__update.xml
@@ -1,76 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<?xml version="1.0" encoding="utf-8"?>-->
-<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
-<!--    xmlns:tools="http://schemas.android.com/tools"-->
-<!--    android:layout_width="match_parent"-->
-<!--    android:layout_height="match_parent"-->
-<!--    android:background="@color/cardview_dark_background">-->
-
-<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
-<!--        android:id="@+id/updateNoteConstraint"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:padding="16dp">-->
-
-<!--        <com.google.android.material.textfield.TextInputLayout-->
-<!--            android:id="@+id/updateTitle"-->
-<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_margin="4dp"-->
-<!--            android:hint="Title"-->
-<!--            app:layout_constraintBottom_toTopOf="@+id/updateContent"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toTopOf="parent">-->
-
-
-<!--            <com.google.android.material.textfield.TextInputEditText-->
-<!--                android:id="@+id/update_title_edit_text"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:inputType="textAutoCorrect" />-->
-
-<!--        </com.google.android.material.textfield.TextInputLayout>-->
-
-<!--        <com.google.android.material.textfield.TextInputLayout-->
-<!--            android:id="@+id/updateContent"-->
-<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_margin="4dp"-->
-<!--            android:hint="Note"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@id/updateTitle">-->
-
-<!--            <com.google.android.material.textfield.TextInputEditText-->
-<!--                android:id="@+id/update_content_edit_text"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:gravity="top"-->
-<!--                android:inputType="textMultiLine"-->
-<!--                android:lines="100"-->
-<!--                android:minLines="27" />-->
-
-<!--        </com.google.android.material.textfield.TextInputLayout>-->
-
-<!--        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton-->
-<!--            android:id="@+id/update_note_button"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_margin="16dp"-->
-<!--            android:text="Update"-->
-<!--            app:icon="@drawable/ic_check"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            app:layout_constraintEnd_toEndOf="parent" />-->
-
-
-<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
-<!--</ScrollView>-->
-
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -92,23 +20,24 @@
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
             android:hint="Title"
-            app:hintTextColor="@color/white"
             android:textColorHint="@android:color/darker_gray"
+            app:boxStrokeColor="@color/white"
+            app:boxStrokeWidth="2dp"
             app:hintAnimationEnabled="true"
+            app:hintTextColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/updateContent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:boxStrokeColor="@color/white"
-            app:boxStrokeWidth="2dp">
+            app:layout_constraintTop_toTopOf="parent">
 
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/update_title_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="textAutoCorrect"
                 android:textColor="@color/white"
-                android:inputType="textAutoCorrect" />
+                android:textCursorDrawable="@drawable/cursor_color" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -120,24 +49,25 @@
             android:layout_margin="4dp"
             android:hint="Note"
             android:textColorHint="@android:color/darker_gray"
+            app:boxStrokeColor="@color/white"
+            app:boxStrokeWidth="2dp"
             app:hintAnimationEnabled="true"
             app:hintTextColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/updateTitle"
-            app:boxStrokeColor="@color/white"
-            app:boxStrokeWidth="2dp">
+            app:layout_constraintTop_toBottomOf="@id/updateTitle">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/update_content_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:textColor="@color/white"
                 android:gravity="top"
                 android:inputType="textMultiLine"
                 android:lines="100"
-                android:minLines="27" />
+                android:minLines="27"
+                android:textColor="@color/white"
+                android:textCursorDrawable="@drawable/cursor_color" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -145,9 +75,9 @@
             android:id="@+id/update_note_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:backgroundTint="#19ABDF"
             android:text="Save"
             app:icon="@drawable/ic_check"
-            android:backgroundTint="#19ABDF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
