--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -14,4 +14,8 @@
         <!-- Customize your theme here. -->
         <item name="android:navigationBarColor">@color/cardview_dark_background</item>
     </style>
+
+    <style name="ThemeOverlay.AppTheme.TextInputEditText.Outlined" parent="Theme.MyDiary">
+        <item name="colorPrimary">@android:color/white</item>
+    </style>
 </resources>
